linux-kernel-di (0.13) UNRELEASED; urgency=low

  * Add the pcnet32 driver to nic-modules (used by vmware, we have space).
  * Make copy-modules abort if tar fails (lost that when converting from
    fifo).
  * Move sr_mod to scsi-core-modules; it is required for USB cdrom drives
    not just for scsi controllers.

 -- Joey Hess <joeyh@debian.org>  Mon, 10 Nov 2003 02:01:12 -0500

linux-kernel-di (0.12) unstable; urgency=low

  * Add the b44 driver to nic-extra-modules (is this a common module)?
  * Put 3c59x back in nic-modules, no isa-pnp after all.
  * Broke loop.o out into its own package, from floppy-modules, as it has
    nothing to do with floppy support and is needed on media that will not
    have floppy support.
  * Each modules package will provide the base name of the package,
    so that d-i udebs can declare dependencies on modules packages they
    need.

 -- Joey Hess <joeyh@debian.org>  Wed,  5 Nov 2003 11:35:32 -0500

linux-kernel-di (0.11) unstable; urgency=low

  * Gaudenz Steinlin
    - add powerpc and powerpc-small module lists
    - add hfs and affs modules
    - fix gen-deps and copy-modules to work with
      $flavour
  * Joey Hess
    - minor cleanups
    - add srm_env module for alpha. For lack of any better place to put it,
      it's in the kernel-image package for now. Closes: #218632
    - update build_all to support flavours
    - move ne.o to nic-extra-modules. It requires isa-pnp, which is too big
      to fit on the root floppy. Closes: #215509
    - 3c59x and smc-ultra move also for the same reason.
    - nic-modules loses its dep on isa-pnp-modules.
    - temporarily comment out powerpc stuff in kernel-versions until the
      kernels are in the archive

 -- Joey Hess <joeyh@debian.org>  Mon,  3 Nov 2003 19:37:52 -0500

linux-kernel-di (0.10) unstable; urgency=low

  * Change ext3 and reiserfs to priority standard, to make them be
    available by default in the installer.
