@@ -1,1 +1,2 @@
 drivers/cdrom/cdrom.o
+drivers/scsi/sr_mod.o
