@@ -67,7 +67,7 @@ Description: IDE support
  This package contains core IDE support for the Linux kernel.
 
 Package: cdrom-core-modules
-Depends: kernel-image
+Depends: kernel-image, scsi-core-modules
 Priority: standard
 Description: CDROM support
  This package contains core CDROM support for the Linux kernel.
